--- a/ft_printf/Makefile
+++ b/ft_printf/Makefile
@@ -1,32 +1,40 @@
 CC			= 	cc
+NAME		=	libftprintf.a
 CFLAGS		= 	-Wall -Wextra -Werror
 INCLUDE_DIR	:= 	./includes
 OBJS_DIR	:=	objs
 SRCS_DIR	:=	./srcs
-LIBFT_DIR	:=	..
-LIBFT_I		:=	..
 SRCS		:=	$(SRCS_DIR)/ft_printf.c \
 				$(SRCS_DIR)/ft_print_pointer.c \
-				$(SRCS_DIR)/ft_printf_utils.c \
+				$(SRCS_DIR)/utils.c \
 				$(SRCS_DIR)/ft_putnbr_base.c \
 				$(SRCS_DIR)/ft_print_hex.c \
 				$(SRCS_DIR)/ft_print_unsigned.c
 				
 OBJS		:=	$(SRCS:$(SRCS_DIR)/%.c=$(OBJS_DIR)/%.o)
-HEADERS		:=	$(INCLUDE_DIR)/ft_printf.h $(LIBFT_I)/libft.h
+HEADERS		:=	$(INCLUDE_DIR)/ft_printf.h $(INCLUDE_DIR)/libft.h
 
-all: $(OBJS)
+all:$(NAME)
+
+$(NAME):makelibft $(OBJS) 
+	@ cp libft/libft.a $@
+	@ ar rcs  $@ $(OBJS)
+
+makelibft:
+	@ make --no-print-directory -C libft all
 
 $(OBJS_DIR)/%.o: $(SRCS_DIR)/%.c $(HEADERS) Makefile
 	@ mkdir -p $(@D)
-	@ $(CC) $(CFLAGS) -g -I $(INCLUDE_DIR) -I $(LIBFT_I) -c -o $@  $< 
+	@ $(CC) $(CFLAGS) -g -I $(INCLUDE_DIR) -c -o $@  $< 
 
 clean: 
-	 rm -rf $(OBJS_DIR)
+	@ rm -rf $(OBJS_DIR)
+	@ make --no-print-directory -C libft clean
 
 fclean: clean
 	@ rm -f libftprintf.a
+	@ make  --no-print-directory -C libft fclean
 
 re: fclean all
 
-.PHONY: all clean fclean re
+.PHONY: all clean fclean re makelibft
